--- a/java8/特性.md
+++ b/java8/特性.md
@@ -17,13 +17,17 @@
       Lambda 表达式的引入给开发者带来了不少优点：
       在 Java 8 之前，匿名内部类，监听器和事件处理器的使用都显得很冗长，代码可读性很差，Lambda 表达式的应用则使代码变得更加紧凑，可读性增强；
       Lambda 表达式使并行操作大集合变得很方便，可以充分发挥多核 CPU 的优势，更易于为多核处理器编写代码
-      
+   
+   
+   
 - Lambda表达式让匿名类不再需要，这为Java增添了简洁但实用的函数式编程能力。    
 
 - Lambda表达式优先用于定义功能接口在行内的实现，即单个方法只有一个接口
 
 - 可访问 static 修饰的成员变量，如果是 final static 修饰，不可再次赋值，只有 static 修饰可再次赋值；
 - 可访问表达式外层的 final 局部变量（不用声明为 final，隐性具有 final 语义），不可再次赋值。
+
+
 
 方法引用提供了一个很有用的语义来直接访问类或者实例的已经存在的方法或者构造方法。
 
@@ -34,3 +38,17 @@
 - 特定类的任意对象方法引用。它的语法是Class::method。要求方法是没有参数的
 - 特定对象的方法引用，它的语法是instance::method。要求方法接受一个参数，
 与3不同的地方在于，3是在列表元素上分别调用方法，而4是在某个对象上调用方法，将列表元素作为参数传入；
+
+函数式接口通过一个单一的功能来表现
+
+**在实际使用过程中，加有@FunctionalInterface注解的方法均是此类接口，位于java.util.Funtion包中。**
+
+eval 是一个把字符串当作表达式执行而返回一个结果的函数
+
+Java 8引入默认方式使得List和Collection接口能够拥有forEach方法的默认实现。实现了这些接口的类也不必再实现相同的功能了。
+
+Optional是一个容器对象，用于容纳非空对象。Optional对象通过缺失值值代表null。这个类有许多实用的方法来促使代码能够处理一些像可用或者不可用的值，而不是检查那些空值（null）。
+
+java.util.Optional<T>类的声明
+
+         public final class Optional<T>extends Object
