--- a/JDBC/笔记.md
+++ b/JDBC/笔记.md
@@ -63,3 +63,103 @@ MySQL 的 Connector/Java 的驱动程序是一个类型4驱动程序。因为他
 第2类驱动程序是在类型3或类型4驱动程序还没有提供数据库的情况下显得非常有用。
 
 类型1驱动程序不被认为是部署级别的驱动程序，它通常仅用于开发和测试目的。
+
+我们在使用驱动程序之前，必须注册你的驱动程序。注册驱动程序是将我们将要使用的数据库的驱动程序的类文件被加载到内存中，以便它可以被用作 JDBC 接口的实现过程。比如我们使用的 Mysql 数据库。我们可以通过以下两种方式来注册我们的驱动程序。
+
+1、方法1——Class.forName()：
+
+注册一个驱动程序中最常用的方法是使用Java的Class.forName()方法来动态加载驱动程序的类文件到内存中，它会自动将其注册。
+
+使用Class.forName()来注册 Mysql 驱动程序：
+
+```java
+
+try {
+   Class.forName(&#34;com.mysql.jdbc.Driver&#34;);
+}
+catch(ClassNotFoundException ex) {
+   System.out.println(&#34;Error: unable to load driver class!&#34;);
+   System.exit(1);
+}
+
+```
+2、方法2——DriverManager.registerDriver()：
+
+```java
+
+   Driver driver = new com.mysql.jdbc.Driver();
+   DriverManager.registerDriver(driver);
+
+```
+
+#### 2.3.3 数据库 URL 制定
+
+当加载了驱动程序，便可以使用 DriverManager.getConnection() 方法连接到数据库了。
+
+这里给出 DriverManager.getConnection() 三个重载方法：
+```java
+
+getConnection(String url)
+
+getConnection(String url, Properties prop)
+
+getConnection(String url, String user, String password)
+
+```
+
+数据库的URL是指向数据库地址。下表列出了下来流行的JDBC驱动程序名和数据库的URL。
+
+| RDBMS | JDBC驱动程序的名称 | URL |
+|------|--------------------|-----|
+| Mysql | com.mysql.jdbc.Driver | jdbc:mysql://hostname/ databaseName |
+| Oracle | oracle.jdbc.driver.OracleDriver | jdbc:oracle:thin:@hostname:port Number:databaseName |
+| DB2 | COM.ibm.db2.jdbc.net.DB2Driver | jdbc:db2:hostname:port Number/databaseName |
+| Sybase | com.sybase.jdbc.SybDriver | jdbc:sybase:Tds:hostname: port Number/databaseName |
+
+#### 2.3.4 创建连接对象
+
+下面三种形式DriverManager.getConnection()方法来创建一个连接对象，以 Mysql 为例。getConnection()最常用形式要求传递一个数据库URL，用户名 username和密码 password。
+
+1、使用数据库URL的用户名和密码
+
+```java
+
+String URL = &#34;jdbc:mysql://localhost/EXAMPLE&#34;;
+String USER = &#34;username&#34;;
+String PASS = &#34;password&#34;
+Connection conn = DriverManager.getConnection(URL, USER, PASS);
+
+```
+
+2、只使用一个数据库URL
+
+然而，在这种情况下，数据库的URL，包括用户名和密码。
+
+```java
+String URL = &#34;jdbc:mysql://localhost/EXAMPLE?user=root&amp;password=0909&#34;;
+//Mysql URL的参数设置详细可以查阅相关资料
+Connection conn = DriverManager.getConnection(URL);
+```
+
+3、使用数据库的URL和一个Properties对象
+
+```java
+import java.util.*;
+
+String URL = &#34;jdbc:mysql://localhost/EXAMPLE&#34;;
+Properties pro = new Properties( );
+
+//Properties对象，保存一组关键字-值对
+pro.put( &#34;user&#34;, &#34;root&#34; );
+pro.put( &#34;password&#34;, &#34;&#34; );
+
+Connection conn = DriverManager.getConnection(URL, pro);
+
+```
+
+4、关闭JDBC 连接
+
+```
+conn.close();
+```
+
