--- a/JDBC/笔记.md
+++ b/JDBC/笔记.md
@@ -163,3 +163,8 @@ Connection conn = DriverManager.getConnection(URL, pro);
 conn.close();
 ```
 
+Statement	当在运行时使用静态 SQL 语句时（Statement接口不能接受的参数）
+
+CallableStatement	当要访问数据库中的存储过程时（CallableStatement对象的接口还可以接受运行时输入参数）
+
+PreparedStatement	当计划多次使用 SQL 语句时（PreparedStatement 接口接收在运行时输入参数）
