--- a/Struts2/笔记.md
+++ b/Struts2/笔记.md
@@ -31,3 +31,9 @@
 - Struts2 支持多种表现层技术，如 JSP、FreeMarker、Vectocity 等。
 
 - Struts2 的输入验证可以对指定的方法进行验证。
+
+
+apps 文件夹包含了多个 example 示例应用的压缩包。
+docs 文件夹包含了 struts 官方的帮助文档。
+lib 文件夹包含了 struts 提供的类库 jar 包。
+src 文件夹包含了 struts 全部框架的源代码。
