--- a/Calculator/笔记.md
+++ b/Calculator/笔记.md
@@ -1,3 +1,5 @@
 JPanel 是一般轻量级容器
 
 JTextField组件实现一个文本框，用来接受用户输入的单行文本信息，JTextField类提供的常用构造方法如表1所示。
+
+J2SE 提供的最后一个批注是 @SuppressWarnings。该批注的作用是给编译器一条指令，告诉它对被批注的代码元素内部的某些警告保持静默。
